# health_ml_tutorial

./: .gitignore  LICENSE.md  README.md  download_nhanes.py  download_physionet_sepsis.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  docs-pr-check.yml
binder/: requirements.txt
docs/: conf.py  gallery_hooks.py  index.rst
docs/_static/: custom.css
docs/_static/css/: custom.css
docs/_static/js/: navbar-scroll.js
docs/_templates/: gael_footer.html  sg_launcher_links.html
examples/: 01_predict_5yr_mortality.py  01_predict_icu_sepsis.py  02_overfit_underfit.py  02_predict_icu_mortality.py  02_predict_sepsis.py  03_nhanes_predict_5yr_mortality.py  03_overfit_underfit.py  04_covariate_shift.py  05_indication_bias.py  05_survival_analysis.py  06_indication_bias.py  06_survival_analysis.py  README.rst  matplotlibrc  nhanes_1999_2018_mortality_5yr_horizon.csv  physionet_sepsis_causal.csv  plot_data_exploration.py  plot_intro.py  plot_survival_analysis.py  support2_icu_mortality.csv
